fixed issue where first paragraph was text aligning center

--- a/dev/styles/partials/_aboutMe.scss
+++ b/dev/styles/partials/_aboutMe.scss
@@ -118,7 +118,7 @@
 			.aboutMe__description {
 				margin: 0;
 				width: 75%;
-				text-align: center;
+				// text-align: center;
 				.aboutMe__lineBreak::after {
 					content: " ";
 					padding-bottom: 100px;
